--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,13 @@ html {
 }
 
 body {
+  position: relative;
   color: #f4f4f4;
   font-family: monospace, Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90%;
 }
 
 body a {
@@ -28,16 +33,17 @@ body a {
 }
 
 .App {
+  position: relative;
   background-color: #111;
-  box-shadow: .1rem .6rem 1rem rgb(255, 248, 226);
+  box-shadow: .3rem .3rem .8rem aqua;
   margin: 0 auto;
   margin-top: 3rem;
   padding: 4rem 0;
   width: 500px;
-  height: auto;
   border-radius: 6px;
   border: 1px solid goldenrod;
   text-align: center;
+  transform: scale(1.4);
   transition: all .3s;
 }
 
@@ -60,6 +66,12 @@ body a {
 .App img:active {
   transform: translateY(0px);
   box-shadow: 0 .1rem .2rem rgb(238, 189, 67);
+}
+
+.pokeBallImgContainer {
+  position: absolute;
+  bottom: 5%;
+  left: 35%;
 }
 
 #pokeBallImg {
@@ -119,8 +131,8 @@ body a {
   justify-items: center;
   align-items: center;
   margin: 0 auto;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
+  margin-top: 1.5rem;
+  margin-bottom: 2.5rem;
   grid-row-gap: 1rem;
   grid-column-gap: 0rem;
   width: 280px;
@@ -129,8 +141,9 @@ body a {
 
 .gridStats p {
   background-color: #111;
-  box-shadow: 0 .1rem .2rem #fff;
+  box-shadow: 0 .1rem .2rem #15e2e2;
   padding: 8px 8px;
+  width: fit-content;
   border-radius: 6px;
   font-size: 11.5px;
   cursor: pointer;
@@ -139,7 +152,7 @@ body a {
 
 .gridStats p:hover {
   transform: translateY(-3px);
-  box-shadow: 0 .3rem .5rem #fff;
+  box-shadow: 0 .3rem .5rem #09ebeb;
 }
 
 .pokeData {
