--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ body a {
   border-radius: 6px;
   border: 1px solid goldenrod;
   text-align: center;
-  transform: scale(1.4);
+  transform: scale(1.3);
   transition: all .3s;
 }
 
@@ -199,5 +199,29 @@ body a {
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  html {
+    width: 100vw;
+    height: 100%;
+    background: none;
+  }
+  body {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, skyblue 0%, black 100%);
+  }
+
+  .App {
+    transform: scale(1);
+    width: 360px;
+  }
+
+  .pokeBallImgContainer {
+    position: absolute;
+    bottom: 5%;
+    left: 30%;
   }
 }
